@@ -67,6 +67,40 @@ public final class TaskMap {
         return this;
     }
 
+    public boolean pauseTask(String taskName) {
+        try {
+            Scheduler scheduler = schedulerFactory.getScheduler();
+            scheduler.pauseJob(new JobKey(taskName));
+        } catch (SchedulerException e) {
+            e.printStackTrace();
+            return false;
+        }
+        return true;
+    }
+
+    public boolean resumeTask(String taskName) {
+        try {
+            Scheduler scheduler = schedulerFactory.getScheduler();
+            scheduler.resumeJob(new JobKey(taskName));
+        } catch (SchedulerException e) {
+            e.printStackTrace();
+            return false;
+        }
+        return true;
+    }
+
+    public boolean cancelTask(String taskName) {
+        Task task = this.annotations.get(taskName);
+        if (task == null) return false;
+        try {
+            this.unregisterTask(this.tasks.get(taskName));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return false;
+        }
+        return true;
+    }
+
     public TaskMap registerTask(String taskName, TaskHandler task) {
         Task annotation = task.getClass().getAnnotation(Task.class);
         this.annotations.put(taskName, annotation);
@@ -116,7 +150,7 @@ public final class TaskMap {
         classes.forEach(annotated -> {
             try {
                 Task taskData = annotated.getAnnotation(Task.class);
-                Object object = annotated.newInstance();
+                Object object = annotated.getDeclaredConstructor().newInstance();
                 if (object instanceof TaskHandler) {
                     this.registerTask(taskData.taskName(), (TaskHandler) object);
                     if (taskData.executeImmediatelyAfterReset()) {
